--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Freelancer
-email: your-email@domain.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+email: bitknowledge0@gmail.com
+url: https://bitknowledge.github.io
+description: "Wellcome to thr biggest BANGLADESHI tutorial based blog"
+skills: "you can join with us by sending an email"
+meta_author: Jobayer Ahmed Mickey
 
 # Google webmaster tools
 google_verify:
@@ -31,31 +31,21 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
-  location: Location
-  social: Around the Web
-  credits: Credits
+  copyright: Bitknowlwdge
+  social: web.facebook.com/bitknowledge0
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
+  - title: gmail
+    url: bitknowledge0@gmail.com
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: web.facebook.com/bitknowledge0
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/Bitknowledge
 
-# Postal address (add as many lines as necessary)
-address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: 'jobayerahmedmickey@gmail.com'
 
 # Build settings
 markdown: kramdown
