--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Freelancer
+title: Bitknowledge
 email: bitknowledge0@gmail.com
 url: https://bitknowledge.github.io
 description: "Wellcome to thr biggest BANGLADESHI tutorial based blog"
